--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl https://fonts.googleapis.com https://fonts.gstatic.com https://esm.sh https://*.vercel.live; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' https://esm.sh https://*.vercel.live; frame-ancestors 'self' https://*.webflow.io https://*.koninklijkeloop.nl; img-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl https://cdn.prod.website-files.com data:"
+          "value": "default-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl https://fonts.googleapis.com https://fonts.gstatic.com https://esm.sh https://*.vercel.live; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://esm.sh https://*.vercel.live https://vercel.live/_next-live/feedback/; script-src-elem 'self' 'unsafe-inline' https://esm.sh https://*.vercel.live https://vercel.live/_next-live/feedback/; frame-ancestors 'self' https://*.webflow.io https://*.koninklijkeloop.nl; img-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl https://cdn.prod.website-files.com data:"
         },
         {
           "key": "X-Frame-Options",
