--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "**/*",
-      "use": "@vercel/static"
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
     }
   ],
   "headers": [
@@ -12,7 +18,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl https://fonts.googleapis.com https://fonts.gstatic.com https://esm.sh https://*.vercel.app; connect-src 'self' https://*.pusher.com wss://*.pusher.com https://*.vercel.app https://*.google.com https://*.googleusercontent.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://esm.sh https://*.vercel.app https://*.google.com https://*.googleusercontent.com; frame-src 'self' https://*.vercel.app; frame-ancestors 'self' https://*.webflow.io https://*.koninklijkeloop.nl; img-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl https://cdn.prod.website-files.com data:; font-src 'self' https://fonts.gstatic.com"
+          "value": "default-src 'self' https://*.webflow.io https://*.koninklijkeloop.nl; connect-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' 'unsafe-eval'; frame-ancestors 'self' https://*.webflow.io https://*.koninklijkeloop.nl; img-src 'self' data: https://*.webflow.io https://*.koninklijkeloop.nl; font-src 'self' https://fonts.gstatic.com"
         },
         {
           "key": "X-Frame-Options",
@@ -31,12 +37,6 @@
           "value": "X-Requested-With, Content-Type, Accept"
         }
       ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
     }
   ]
 }
