--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Inschrijfformulier voor de Koninklijke loop 2024",
   "scripts": {
-    "start": "serve",
-    "dev": "serve",
-    "build": "echo 'No build step needed'",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -13,10 +14,9 @@
   "dependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "next": "^15.0.1",
+    "next": "^13.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "serve": "^14.0.0",
     "yup": "^1.2.0",
     "@vercel/analytics": "^1.1.1"
   },
@@ -27,8 +27,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.5.0",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3",
     "whatwg-fetch": "^3.6.2"
   },
   "jest": {
@@ -41,7 +45,7 @@
       "\\.(html)$": "<rootDir>/__mocks__/fileMock.js"
     },
     "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest"
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
     },
     "transformIgnorePatterns": [
       "/node_modules/(?!yup|@babel).+\\.js$"
