--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   "dependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vercel/analytics": "^1.1.1",
     "next": "^13.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "yup": "^1.2.0",
-    "@vercel/analytics": "^1.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
