--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
       "isolatedModules": true,
       "jsx": "preserve",
       "incremental": true,
-      "typeRoots": ["./node_modules/@types", "./types"]
+      "typeRoots": ["./node_modules/@types", "./types"],
+      "paths": {
+        "@/*": ["./*"]
+      }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types/**/*.d.ts"],
     "exclude": ["node_modules"]
